Change to getLast for clarity